<resources>

    <string name="app_name">Story Tail</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="welcome">Tell a Tale</string>
    <string name="tail_date">Posted in %s</string>
    <string name="lbl_silent_login">Authenticating</string>
    <string name="lbl_empty_reg_fields">Please fill the username and password fields.</string>
    <string name="lbl_reg_mismatch_password">These passwords do not match.</string>
    <string name="lbl_reg_server_wait">Registering your username </string>
    <string name="lbl_keep_user_logged">Do you want to stay sign in?</string>
    <string name="lbl_reg_username_already_registerd">Username already registered... </string>
    <string name="lbl_reg_failed">An error has occurred during the registration process. Please try again..</string>
    <string name="lbl_max_days_tale_travel">Max days the tale will travel:</string>
    <string name="lbl_max_interactions">Max tales allowed:</string>
    <string name="lbl_yes">Yes</string>
    <string name="lbl_no">No</string>
    <string name="lbl_enable_gps">Your GPS module is disabled. Would you like to enable it ?</string>
    <string name="lbl_tale_title_hint">The title of the tale...</string>
    <string name="lbl_tale_story_hint">Write here your story... Your story will be saved if you choose to leave without sending the story.</string>
    <string name="lbl_cannot_start_tail_no_location">Sorry ... We are trying to determine your current GPS coordinates</string>
    <string name="lbl_title_is_empty">Upps... You need to choose a title for your tale! :)</string>
    <string name="lbl_tale_too_short">:( Your story is very short... Can you write a few more characters? Try to write at least 10 characters</string>
    <string name="lbl_new_tale_added">You just started a new Tale!! :)</string>
    <string name="lbl_new_tale_error">Houston, we have a problem... There as a service error adding your tale... Could you please try again?</string>
    <string name="lbl_previous_cache_tale">You have a previous saved tale. Do you want to continue the last tale ou start a new one?</string>
    <string name="lbl_continue_tale">Continue</string>
    <string name="lbl_start_new_tale">Start a new tale</string>
        <string name="lbl_creating_tale">Releasing your tale into the wild :)</string>
            <string name="lbl_error_finding_tales">Oppss... There was an error while searching for tales...</string>
        
    
    
    <string name="tail_user">by %s</string>
    <string name="signup">Sign Up!</string>
    <string name="login">Login</string>
    <string name="progress_container_text">Loading... Please wait.</string>
    <string name="lbl_loading_stories">Finding near by tales...</string>
    
    <string name="sign_in_hint_username">Username</string>
    <string name="sign_in_hint_password">Password</string>
    <string name="lbl_stay_signed_in">Stay signed in</string>
    <string name="sign_in_title_button">Sign In</string>
    <string name="sign_in_forgot_password_button">Forgot your password?</string>
    <string name="signup_field_email">E-mail</string>
    <string name="signup_field_username">username</string>
    <string name="signup_field_name">Name (Optional)</string>
    <string name="signup_field_email">E-mail Address (Optional)</string>
    <string name="signup_field_female">Female</string>
    <string name="signup_field_male">Male</string>
    <string name="signup_password">Password</string>
    <string name="signup_password_conf">Password (Confirmation)</string>
    <string name="register_button">Register</string>
    <string name="lbl_empty_login_credentials">Username and Password must be filled!</string>
    <string name="lbl_invalid_login_credentials">Invalid Username / Password</string>
    <string name="lbl_network_unavailable">Network currently unavailable. Please try again later.</string>
    <string name="lbl_waiting_for_gps">Trying to find your location... Please wait...</string>
    <string name="lbl_loading_signing_in">Signing in. Please wait...</string>
    
    
    
     <plurals name="lbl_stories_found">
        <item quantity="one">Found a tale near you!</item>
        <item quantity="other">Found %d tales near you!</item>
    </plurals>
    
    <plurals name="lbl_add_tale_day">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <plurals name="lbl_add_tale_week">
        <item quantity="one">%d week</item>
        <item quantity="other">%d weeks</item>
    </plurals>
    <plurals name="lbl_add_tale_month">
        <item quantity="one">%d month</item>
        <item quantity="other">%d months</item>
    </plurals>
    <plurals name="lbl_add_tale_interactions">
        <item quantity="one">%d tail</item>
        <item quantity="other">%d tails</item>
    </plurals>

</resources>