<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.path"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg"
    android:fillViewport="true" >

    <RelativeLayout
        android:id="@+id/info_form"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|left|center" >

        <View
            android:id="@+id/card"
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_alignBottom="@+id/info_password_confirmation"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="-5dip"
            android:layout_marginLeft="16.0dip"
            android:layout_marginRight="16.0dip"
            android:layout_marginTop="16.0dip"
            android:background="@drawable/login_layer" />

        <ImageView
            android:id="@+id/profile_photo"
            android:layout_width="76.0sp"
            android:layout_height="76.0sp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="16.0dip"
            android:layout_marginRight="32.0dip"
            android:layout_marginTop="32.0dip"
            android:minHeight="76.0dip"
            android:minWidth="76.0dip" />

        <TextView
            android:id="@+id/profile_photo_hint"
            android:layout_width="0.0dip"
            android:layout_height="38.0dip"
            android:layout_alignBottom="@+id/profile_photo"
            android:layout_alignLeft="@+id/profile_photo"
            android:layout_alignRight="@+id/profile_photo"
            android:gravity="center"
            android:minHeight="38.0dip"
            android:text="xxx"
            android:textColor="#FFF"
            android:textSize="16.0sp" />

        <EditText
            android:id="@+id/username"
            style="@style/tale_default_edittext"
            android:layout_width="0.0dip"
            android:layout_height="38dip"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="32.0dip"
            android:layout_marginTop="22.0dip"
            android:layout_toLeftOf="@+id/profile_photo"
            android:hint="@string/signup_field_username"
            android:imeOptions="actionNext"
            android:inputType="textNoSuggestions" />

        <EditText
            android:id="@+id/name"
            style="@style/tale_default_edittext"
            android:layout_width="0.0dip"
            android:layout_height="38dip"
            android:layout_alignLeft="@+id/username"
            android:layout_alignRight="@+id/username"
            android:layout_below="@+id/username"
            android:layout_marginTop="10.0dip"
            android:hint="@string/signup_field_name"
            android:imeOptions="actionNext"
            android:inputType="textPersonName|textCapWords" />

        <!-- <LinearLayout -->
        <!-- android:id="@+id/info_form_gender" -->
        <!-- android:layout_width="0.0dip" -->
        <!-- android:layout_height="46.0sp" -->
        <!-- android:layout_below="@+id/name" -->
        <!-- android:layout_marginLeft="32.0dip" -->
        <!-- android:layout_marginRight="32.0dip" -->
        <!-- android:layout_marginTop="10.0dip" -->
        <!-- android:gravity="center" -->
        <!-- android:minHeight="46.0dip" -->
        <!-- android:orientation="horizontal" > -->


        <!-- <CheckedTextView -->
        <!-- android:id="@+id/male" -->
        <!-- style="@style/tale_default_text" -->
        <!-- android:layout_width="0.0dip" -->
        <!-- android:layout_height="38dip" -->
        <!-- android:layout_weight="1.0" -->
        <!-- android:checkMark="@drawable/tail_checkbox_selector" -->
        <!-- android:focusable="true" -->
        <!-- android:gravity="left|center" -->
        <!-- android:paddingLeft="10.0dip" -->
        <!-- android:paddingRight="16.0dip" -->
        <!-- android:text="@string/signup_field_male" -->
        <!-- android:textColor="@color/default_field_hint" /> -->


        <!-- <View -->
        <!-- android:id="@+id/info_form_gender_divider" -->
        <!-- android:layout_width="1.0dip" -->
        <!-- android:layout_height="20.0dip" -->
        <!-- android:background="@color/default_border" /> -->


        <!-- <CheckedTextView -->
        <!-- android:id="@+id/female" -->
        <!-- style="@style/tale_default_text" -->
        <!-- android:layout_width="0.0dip" -->
        <!-- android:layout_height="fill_parent" -->
        <!-- android:layout_weight="1.0" -->
        <!-- android:checkMark="@drawable/tail_checkbox_selector" -->
        <!-- android:focusable="true" -->
        <!-- android:gravity="left|center" -->
        <!-- android:paddingLeft="26.0dip" -->
        <!-- android:paddingRight="0.0dip" -->
        <!-- android:text="@string/signup_field_female" -->
        <!-- android:textColor="@color/default_field_hint" /> -->
        <!-- </LinearLayout> -->

        <EditText
            android:id="@+id/email"
            style="@style/tale_default_edittext"
            android:layout_width="fill_parent"
            android:layout_below="@+id/name"
            android:layout_marginLeft="32.0dip"
            android:layout_marginRight="32.0dip"
            android:layout_marginTop="10.0dip"
            android:hint="@string/signup_field_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/info_password"
            style="@style/tale_default_edittext"
            android:layout_width="fill_parent"
            android:layout_below="@+id/email"
            android:layout_marginLeft="32.0dip"
            android:layout_marginRight="32.0dip"
            android:layout_marginTop="10.0dip"
            android:hint="@string/signup_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/info_password_confirmation"
            style="@style/tale_default_edittext"
            android:layout_width="fill_parent"
            android:layout_below="@+id/info_password"
            android:layout_marginLeft="32.0dip"
            android:layout_marginRight="32.0dip"
            android:layout_marginTop="10.0dip"
            android:hint="@string/signup_password_conf"
            android:imeOptions="actionNext"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/register"
            style="@style/default_button"
            android:layout_width="0.0dip"
            android:layout_alignLeft="@+id/card"
            android:layout_alignRight="@+id/card"
            android:layout_below="@+id/card"
            android:layout_marginTop="22.0dip"
            android:text="@string/register_button" />
    </RelativeLayout>

</ScrollView>